cmake_minimum_required(VERSION 3.10)
project(Interview)

#set(CMAKE_CXX_STANDARD 11)
include_directories(include)

#add_executable(quick_sort src/quick_sort.cpp src/quick_sort.h)
#add_executable(29_more_than_half_num src/29_more_than_half_num.cpp src/quick_sort.h src/quick_sort.cpp)
#add_executable(binary_tree_test src/binary_tree_test.cpp src/binary_tree.cpp)
#add_executable(bit_operation_associated src/bit_operation_associated_test.cpp src/bit_operation_associated.cpp)
#add_executable(sorted_array_associated_test src/sort_array_associated_test.cpp src/sort_array_associated.cpp)
#add_executable(string_associated_test src/string_associated_test.cpp src/string_associated.cpp)
#add_executable(common_io src/common_io.cpp)
#add_executable(other_problems src/other_problems.cpp)

add_executable(neteasy_test2 src/neteasy_test.cpp)
